welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
    	droite()
              ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
    if(getCouleurSol() != Color.green)
    ^